--- a/vintiTri/package.json
+++ b/vintiTri/package.json
@@ -23,10 +23,10 @@
     "@angular/router": "~8.0.0",
     "angular-font-awesome": "^3.1.2",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.6.0",
     "cors": "^2.8.5",
     "emailjs": "^2.2.0",
-    "emailjs-com": "^2.4.1",
+    "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -34,28 +34,28 @@
     "jquery": "^3.5.1",
     "material": "^0.4.3",
     "material-design-icons": "^3.0.1",
-    "nodemailer": "^6.4.2",
+    "nodemailer": "^6.4.18",
     "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
+    "tslib": "^1.14.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.7",
-    "@angular/cli": "^8.3.25",
+    "@angular-devkit/build-angular": "^0.803.29",
+    "@angular/cli": "^8.3.23",
     "@angular/compiler-cli": "~8.0.0",
     "@angular/language-service": "~8.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
+    "karma": "^6.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "protractor": "^5.4.3",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
